--- a/House_Prices_2.ipynb
+++ b/House_Prices_2.ipynb
@@ -6,7 +6,7 @@
       "name": "House Prices_2.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyMojqNoPOa6UFELQs5HeIfv",
+      "authorship_tag": "ABX9TyNlMV4CVi1WNNhE9GH0r1YK",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -4592,23 +4592,9 @@
         "colab_type": "text"
       },
       "source": [
-        "# Error Metric \n",
-        "Root Mean Square Error"
+        "# Performance Metric \n",
+        "I initially wanted to use Root Mean Square Error, but was facing errors and chose r2_score for quick results. "
       ]
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "Gz0vKcjZhqyB",
-        "colab_type": "code",
-        "colab": {}
-      },
-      "source": [
-        "def rmse(y_pred, y_test):\n",
-        "    return np.sqrt(((y_pred - y_test) ** 2).mean())"
-      ],
-      "execution_count": 0,
-      "outputs": []
     },
     {
       "cell_type": "markdown",
@@ -4792,7 +4778,9 @@
         "colab_type": "text"
       },
       "source": [
-        "## Lasso"
+        "## Lasso\n",
+        "\n",
+        "I am trying to find the best value for alpha by using GridSearchCV"
       ]
     },
     {
@@ -5263,6 +5251,18 @@
       ],
       "execution_count": 0,
       "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "V7u8gSWGMaZk",
+        "colab_type": "text"
+      },
+      "source": [
+        "My score came to be 0.12865 which seems pretty decent given the simplicity of the models used. \n",
+        "\n",
+        "I learnt a lot about EDA, Feature Selection and Engineering through this exercise. In retrospect, I could've been more efficient while doing EDA as we don't get to spend that much time in the real world. I should be able to intuitively estimate variables that affect and don't affect the SalePrice before making all kinds of charts so that I'm not overwhelmed by them. Anyway, practice, practice, practice. We will get there, soon!"
+      ]
     },
     {
       "cell_type": "markdown",
