--- a/House_Prices_2.ipynb
+++ b/House_Prices_2.ipynb
@@ -6,7 +6,7 @@
       "name": "House Prices_2.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyNlMV4CVi1WNNhE9GH0r1YK",
+      "authorship_tag": "ABX9TyPWciTNUIWhgIMPoUkXPoa1",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -91,7 +91,7 @@
         "y_train_df= pd.read_csv(path_y_train)\n",
         "X_train_df"
       ],
-      "execution_count": 92,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -4609,10 +4609,8 @@
         "\n",
         "We will use the following models using Sklearn library\n",
         "1. Linear Regression\n",
-        "2. Support Vector Machine Regression\n",
-        "3. Random Forest Regression\n",
-        "4. Gradient Boosting Regression\n",
-        "5. K-nearest Neighbors Regression\n",
+        "2. Lasso\n",
+        "3. Elastic Net Regression\n",
         "\n",
         "I recommend [this](https://towardsdatascience.com/train-test-split-and-cross-validation-in-python-80b61beca4b6) post for understanding cross validation better."
       ]
@@ -4637,16 +4635,16 @@
       "metadata": {
         "id": "2RPle7MbevoW",
         "colab_type": "code",
+        "outputId": "235caeb6-c642-457c-c0bd-59e3807496ef",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 34
-        },
-        "outputId": "235caeb6-c642-457c-c0bd-59e3807496ef"
+        }
       },
       "source": [
         "X.shape"
       ],
-      "execution_count": 21,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -4667,16 +4665,16 @@
       "metadata": {
         "id": "mQfsarqkew3r",
         "colab_type": "code",
+        "outputId": "c1104018-d8c0-45c7-eb09-3241867193c1",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 34
-        },
-        "outputId": "c1104018-d8c0-45c7-eb09-3241867193c1"
+        }
       },
       "source": [
         "y.shape"
       ],
-      "execution_count": 22,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -4744,18 +4742,18 @@
       "metadata": {
         "id": "ECGG8Mgnl5_L",
         "colab_type": "code",
+        "outputId": "2fe29c06-e011-4265-bbe7-80fa9977857c",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 34
-        },
-        "outputId": "2fe29c06-e011-4265-bbe7-80fa9977857c"
+        }
       },
       "source": [
         "from sklearn.linear_model import LinearRegression\n",
         "lr= LinearRegression()\n",
         "r2_score(lr, X,y, 10)\n"
       ],
-      "execution_count": 204,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -4788,11 +4786,11 @@
       "metadata": {
         "id": "G1IC0jMTKpw9",
         "colab_type": "code",
+        "outputId": "06045ff3-322f-4f7b-e8cd-638220e5c37e",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 1000
-        },
-        "outputId": "06045ff3-322f-4f7b-e8cd-638220e5c37e"
+        }
       },
       "source": [
         "from sklearn.model_selection import GridSearchCV\n",
@@ -4803,7 +4801,7 @@
         "lasso_reg.fit(X,y)\n",
         "lasso_reg.best_params_\n"
       ],
-      "execution_count": 167,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -4890,16 +4888,16 @@
       "metadata": {
         "id": "r5fbTV6ZMk_B",
         "colab_type": "code",
+        "outputId": "81c7506c-7e8f-4288-9e99-ca4793855d22",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 187
-        },
-        "outputId": "81c7506c-7e8f-4288-9e99-ca4793855d22"
+        }
       },
       "source": [
         "lasso_reg"
       ],
-      "execution_count": 157,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -4929,17 +4927,17 @@
       "metadata": {
         "id": "rKC5Vq7eRX6_",
         "colab_type": "code",
+        "outputId": "e9735bd7-c771-4570-bfd6-2c6b902db33e",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 34
-        },
-        "outputId": "e9735bd7-c771-4570-bfd6-2c6b902db33e"
+        }
       },
       "source": [
         "ls= Lasso(alpha=0.0001)\n",
         "r2_score(ls, X,y, 10)"
       ],
-      "execution_count": 206,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -4971,11 +4969,11 @@
       "metadata": {
         "id": "VxMz_fHW4iMp",
         "colab_type": "code",
+        "outputId": "71744db6-ecb9-4ddf-cbae-c47ef7f71bf0",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 34
-        },
-        "outputId": "71744db6-ecb9-4ddf-cbae-c47ef7f71bf0"
+        }
       },
       "source": [
         "\n",
@@ -4983,7 +4981,7 @@
         "eln= ElasticNet(alpha=0.0001, l1_ratio=0.9 )\n",
         "r2_score(eln, X,y,10)"
       ],
-      "execution_count": 213,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -5047,18 +5045,18 @@
       "metadata": {
         "id": "OcCHvegkDESJ",
         "colab_type": "code",
+        "outputId": "346f534a-d04a-4c12-fa9c-ffee0be3e82e",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 51
-        },
-        "outputId": "346f534a-d04a-4c12-fa9c-ffee0be3e82e"
+        }
       },
       "source": [
         "ls.fit(X_train_df,y_train_df)\n",
         "y_pred = ls.predict(X_test_df)\n",
         "y_pred"
       ],
-      "execution_count": 217,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -5080,18 +5078,18 @@
       "metadata": {
         "id": "vIKVrQ3BDt2d",
         "colab_type": "code",
+        "outputId": "ba5a235b-558a-495c-9a44-59dfd57e2ab9",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 51
-        },
-        "outputId": "ba5a235b-558a-495c-9a44-59dfd57e2ab9"
+        }
       },
       "source": [
         "y_lamd= -0.0782284443543878\n",
         "y_test= invboxcox(y_pred,y_lamd)\n",
         "y_test"
       ],
-      "execution_count": 227,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -5113,17 +5111,17 @@
       "metadata": {
         "id": "Ul4atzoJFRxP",
         "colab_type": "code",
+        "outputId": "bab943cf-4b39-4314-b7de-6a62a6ea3730",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 450
-        },
-        "outputId": "bab943cf-4b39-4314-b7de-6a62a6ea3730"
+        }
       },
       "source": [
         "y_test_df= pd.DataFrame(data= y_test, index=X_test_df.index, columns=['SalePrice'])\n",
         "y_test_df"
       ],
-      "execution_count": 226,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "execute_result",
